k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix
  namespace: netflix-local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
      - name: netflix
        image: netflix-local:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
