k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix
  namespace: netflix-local
spec:
  type: NodePort
  selector:
    app: netflix
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
