k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix
  namespace: netflix-local
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: netflix.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix
            port:
              number: 80
